Update Slundge video links

--- a/_posts/2020-07-31-slundge.md
+++ b/_posts/2020-07-31-slundge.md
@@ -7,7 +7,7 @@ categories:
 - Tunes
 ---
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/TODO" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/XQ0FLt0jW94" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 We got ourselves a Slundge now.
 
